No longer wrapping posts in paragraph

--- a/app/assets/stylesheets/home/blog.scss
+++ b/app/assets/stylesheets/home/blog.scss
@@ -64,7 +64,7 @@
 
   .post-content {
     @include clearfix;
-    padding: 0px 15px 10px;
+    padding: 15px 15px 10px;
   }
 
   .date {
